--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
  <header class="top-header">
    <div class="container-fluid">
      <nav class="navbar navbar-expand-lg navbar-light main-menu" > 
-        <a class="navbar-brand left-off" href="#" data-bs-toggle="offcanvas" data-bs-target="#offcanvasScrolling" aria-controls="offcanvasScrolling"><i class="fa-solid fa-bars"></i> Connect Legal</a>
+        <a class="navbar-brand left-off" href="#" data-bs-toggle="offcanvas" data-bs-target="#offcanvasScrolling" aria-controls="offcanvasScrolling"><i class="fa-solid fa-bars"></i> Connect Legal1223</a>
  
         <div class="offcanvas offcanvas-start" data-bs-scroll="true" data-bs-backdrop="false" tabindex="-1" id="offcanvasScrolling" aria-labelledby="offcanvasScrollingLabel"> 
           <div class="offcanvas-body">
