--- a/dashborad_apge/articles1.html
+++ b/dashborad_apge/articles1.html
@@ -135,7 +135,36 @@
       
                       </div>
                       <div class="col-sm-1 pl-0 text-right">
-                        <a href="#"><i class="fa-solid fa-ellipsis-vertical vertical-ic"></i></a>
+                        <ul class="moreoption">
+                          <li class="navbar nav-item dropdown">
+                              <a class="nav-link dropdown-toggle" href="#"
+                                  role="button" data-bs-toggle="dropdown"
+                                  aria-expanded="false"><i class="fa-solid fa-ellipsis-vertical text-white"></i></a>
+                              <ul class="dropdown-menu img-width">
+                                  <li><a class="dropdown-item" href="#"> <img
+                                              src="images/icons-/1.png" alt="">
+                                              My Profile</a>
+                                  </li>
+                                  <li><a class="dropdown-item" href="#"> <img
+                                              src="images/icons-/2.png" alt="">
+                                              Dashboard</a>
+                                  </li>
+                                  <li><a class="dropdown-item" href="#"> <img
+                                              src="images/icons-/3.png" alt="">
+                                              Write Testimonials</a>
+                                  </li>
+                                  <li><a class="dropdown-item" href="#"> <img
+                                              src="images/icons-/4.png" alt="">
+                                              Blogs and Articles</a>
+                                  </li>
+                                  <li><a class="dropdown-item" href="#"> <img
+                                              src="images/icons-/5.png" alt="">
+                                              Log Out</a>
+                                  </li>
+                              </ul>
+                          </li>
+      
+                      </ul>
                       </div>
                     </div>
                   </div>
@@ -298,6 +327,18 @@ $('.intercom-composer-popover-input').on('input', function() {
     $(".intercom-emoji-picker-emoji").show();
   }
 });
+  </script>
+
+<script>
+  $(document).ready(function() {
+    $(window).scroll(function() {
+      if ($(document).scrollTop() > 70) {
+        $(".top-header").addClass("head-fixed");
+      } else {
+        $(".top-header").removeClass("head-fixed");
+      }
+    });
+  });
   </script>
 </body>
 
