--- a/dashborad_apge/service_pages.html
+++ b/dashborad_apge/service_pages.html
@@ -136,7 +136,36 @@
 
                                 </div>
                                 <div class="col-sm-1 pl-0 text-right">
-                                    <a href="#"><i class="fa-solid fa-ellipsis-vertical vertical-ic"></i></a>
+                                    <ul class="moreoption">
+                                        <li class="navbar nav-item dropdown">
+                                            <a class="nav-link dropdown-toggle" href="#"
+                                                role="button" data-bs-toggle="dropdown"
+                                                aria-expanded="false"><i class="fa-solid fa-ellipsis-vertical text-white"></i></a>
+                                            <ul class="dropdown-menu">
+                                                <li><a class="dropdown-item" href="#"> <img
+                                                            src="images/file-2.png" alt="">
+                                                        Action</a>
+                                                </li>
+                                                <li><a class="dropdown-item" href="#"> <img
+                                                            src="images/file-2.png" alt="">
+                                                        Action</a>
+                                                </li>
+                                                <li><a class="dropdown-item" href="#"> <img
+                                                            src="images/file-2.png" alt="">
+                                                        Action</a>
+                                                </li>
+                                                <li><a class="dropdown-item" href="#"> <img
+                                                            src="images/file-2.png" alt="">
+                                                        Action</a>
+                                                </li>
+                                                <li><a class="dropdown-item" href="#"> <img
+                                                            src="images/file-2.png" alt="">
+                                                        Action</a>
+                                                </li>
+                                            </ul>
+                                        </li>
+
+                                    </ul>
                                 </div>
                             </div>
                         </div>
